cmake_minimum_required(VERSION 3.31)
project(CPP_Practice)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# 加入子資料夾
add_subdirectory(ABC231)
add_subdirectory(ABC349)
add_subdirectory(ABC350)
add_subdirectory(ABC418)
add_subdirectory(NTUCPCOJ)
add_subdirectory(SproutOJ)
add_subdirectory(CSES)
add_subdirectory(USACO)
add_subdirectory(CF)
add_subdirectory(YS)
add_subdirectory(AtCoder)